gcc/testsuite/rust/rustc/ui/const-generics/const-param-in-trait-ungated.rs
trait Trait<const T: ()> {} // { dg-error ".E0658." "" { target *-*-* } }

fn main() {}

